<resources>
    <string name="app_name">RadioGroupTabDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>


    <!--HomeActivity-->
    <string name="home_home">首页</string>
    <string name="home_find">发现</string>
    <string name="home_search">搜索</string>
    <string name="home_profile">我</string>


    <string name="title">车联网</string>
    <string name="username">账号</string>
    <string name="userPsd">密码</string>
    <string name="tv_name">请输入用户名</string>
    <string name="tv_psd">请输入密码</string>
    <string name="login">登陆</string>
    <string name="login_success">登陆成功</string>
    <string name="rememberPSd">记住密码</string>
    <string name="modifyPsd">修改密码</string>
    <string name="findPsd">找回密码</string>
    <string name="register">立即注册</string>
    <string name="namePsd_empty">用户名或密码不能为空</string>
    <string name="u_title">个人信息</string>
    <string name="u_username">姓名</string>
    <string name="u_phone">手机号码</string>
    <string name="u_sex">性别</string>
    <string name="u_carId">车牌号</string>
    <string name="u_exit">退出</string>

    <string name="h_title">生鲜运输</string>
    <string name="h_ID">设备地址</string>
    <string name="h_ID_unit">编号</string>
    <string name="h_latitude">纬度</string>
    <string name="h_longitude">经度</string>
    <string name="h_latLong_unit">°</string>
    <string name="h_pressure">压力</string>
    <string name="h_pressure_unit">MPA</string>
    <string name="h_temperature">温度</string>
    <string name="h_temperature_unit">℃</string>
    <string name="h_moisture">湿度</string>
    <string name="h_moisture_unit">%</string>
    <string name="h_speed">行车速度</string>
    <string name="h_speed_unit">KM/h</string>
    <string name="h_oilPlace">燃油油位</string>
    <string name="h_oilPlace_unit">ml</string>
    <string name="h_roadTemperature">路面温度</string>
    <string name="h_roadTemperature_unit">℃</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
